--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -8,7 +8,7 @@
 <body>
     <div th:fragment="menu" id="menu">
         <nav class="navbar">
-            <a th:href="@{/}">Leaving System</a>
+            <a th:href="@{/staff/viewLeave}">Leave System</a>
             <a th:href="@{/}">Home</a>
             <a th:href="@{/}">About</a>
 
