--- a/src/main/resources/templates/viewLeave.html
+++ b/src/main/resources/templates/viewLeave.html
@@ -17,15 +17,15 @@
                 <th>Manage Leave</th>
             </tr>
             <tr th:each = "leave : ${leaves}" >  
-                <td th:utext = "${leave.leaveId}">Id</td>
+                <!-- <td th:utext = "${leave.leaveId}">Id</td>
                 <td th:utext = "${leave.startDate}">Start Date</td>
                 <td th:utext = "${leave.endDate}">End Date</td>
                 <td th:utext = "${leave.leaveType}">Leave Type</td>
                 <td th:utext = "${leave.reason}">Reason</td>
-                <td th:utext = "${leave.status}">Status</td>
+                <td th:utext = "${leave.status}">Status</td> -->
                 
                 <td>
-                    <form th:action="@{/staff/manageLeave}" th:object="${user}" method="POST">
+                    <form th:action="@{/staff/manageLeave}" th:object="${employee}" method="POST">
                         <!-- <input type="hidden" name="id" th:value="${person.id}"/>
                         <input type="hidden" name="firstName" th:value="${person.firstName}"/>
                         <input type="hidden" name="lastName" th:value="${person.lastName}"/> 
