--- a/src/main/resources/templates/viewLeave.html
+++ b/src/main/resources/templates/viewLeave.html
@@ -25,20 +25,16 @@
                 <td th:utext = "${leave.status}">Status</td>
                 
             <td>
-                <form th:action="@{/staff/manageLeave}" th:object="${employee}" method="POST">
-                    <!-- <input type="hidden" name="id" th:value="${person.id}"/>
-                    <input type="hidden" name="firstName" th:value="${person.firstName}"/>
-                    <input type="hidden" name="lastName" th:value="${person.lastName}"/> 
-                    To Implement-->
-
-                    <input type="submit" value="Manage"/>
-                </form>
-                
+                <a th:href="@{/staff/edit/{id}(id=${leave.leaveId})}" class="btn btn-primary btn-sm mb-1">Update</a>
+                <a th:href="@{/staff/delete/{id}(id=${leave.leaveId})}" class="btn btn-danger btn-sm mb-1">Cancel</a>
             </td>
 
             </tr>
             
         </table>
+        <br><br>
+        <h4><a th:href="@{/staff/new }"> >>>>> Take Leave <<<<< </a></h4>
+        <br><br>
 
         <h3>Leave Claiming History </h3>
     
