--- a/src/main/resources/templates/editLeave.html
+++ b/src/main/resources/templates/editLeave.html
@@ -11,16 +11,11 @@
             <div class = "col-lg-6 col-sm-6 container justify-content-center card">
                 <h2>Edit Leave Application Form</h2>
                 <div class = "card-body">
-                    <form th:action="@{/staff/{id}(id=${targetLeave.leaveId})}" th:object="${targetLeave}" method="post">
-
-                        <div class="form-group">
-                            <label> User ID : </label>
-                            <input type="text" name= user th:field="*{user}" class="form-control" placeholder="Enter userId"/>
-                        </div>
-
+                    <form th:action="@{/staff/edit/{id}(id=${targetLeave.leaveId})}" th:object="${targetLeave}" method="post">
+                        
                         <div class="form-group">
                             <label> Leave ID : </label>
-                            <input type="text" name= leaveId th:field="*{leaveId}" class="form-control"/>
+                            <input type="text" name= leaveId th:value="*{leaveId}" class="form-control" readonly/>
                         </div>
 
                         <div class="form-group">
