--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,14 +1,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="html_head" id="html_head" >
     <meta charset="UTF-8">
-    <title>Leaving System</title>
+    <title>Employee Leave System</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 
 <body>
     <div th:fragment="menu" id="menu">
         <nav class="navbar">
-            <a th:href="@{/staff/viewLeave}">Leave System</a>
+            <a th:href="@{/staff/viewLeave}">Employee Leave System</a>
             <a th:href="@{/}">Home</a>
             <a th:href="@{/}">About</a>
 
@@ -17,8 +17,8 @@
                 <div class="subnav">
                     <button class="subnavbtn">Manager Menu <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
-                        <a>1</a>
-                        <a>2</a>
+                        <a th:href="@{/manager/pending}">Pending Leaves & Claims</a>
+                        <a th:href="@{/manager/team-leave}">Past Approvals</a>
                     </div>
                 </div>
             </div>
