--- a/src/main/resources/templates/manager-leave-detail.html
+++ b/src/main/resources/templates/manager-leave-detail.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/layout.html :: html_head"/>
+<head th:replace="fragments/layout.html :: html_head" />
 <body>
-    <div th:replace="fragments/layout.html :: header"/>
-    <div th:replace="fragments/layout.html :: menu"/>
-    <h3>Leave Request Details</h3>
+    <div th:replace="fragments/layout.html :: header" />
+    <div th:replace="fragments/layout.html :: menu" />
+
+  <head>
+      <title>Leave Request Details</title>
+  </head>
+
+<body>
+  <div>
+    <h2>Leave Request Details</h2>
+</div>
     <table>
         <tr>
             <th align="right"><span>Leave ID</span></th>
@@ -12,8 +20,8 @@
         </tr>
         <tr>
           <th align="right"><span>Employee Name</span></th>
-          <td colspan="3" th:text="${leave.employee.name}">Id</td>
-      </tr>
+          <td colspan="3" th:text="${leave.employee?.name}">Id</td>
+        </tr>
         <tr>
             <th align="right"><span> Leave type</span></th>
             <td colspan="3" th:text="${leave.leaveType}">Leave type</td>
@@ -44,24 +52,58 @@
                   <input type="radio" th:field="*{decision}" value="APPROVED" />
                   <label>approve</label> &nbsp;&nbsp; 
                   <input type="radio" th:field="*{decision}" value="REJECTED" /> <label>reject</label>
-                </fieldset>
-              </td>
-
-              <tr>
-
-              <td>
-                <fieldset>
-                  <input th:type="submit" th:value="Update" class="blcass" />
+                  <td><b style='color:red'><span th:if="${#fields.hasErrors('decision')}" th:errors="*{decision}"></span></b></td>
                 </fieldset>
               </td>
             </tr>
-
-
-
-
-    
+            <tr>
+              <td><span>Comment</span></td> 
+              <td><textarea th:field="*{comment}" th:rows="*{comment}" cols="40"></textarea></td>
+              <td><b style='color:red'><span th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}"></span></b></td>
+                  
+            </tr>
+            <tr>
+              
+            </tr>
+            <tr>
+              <td>
+                <fieldset>
+                  <input th:type="submit" th:value="Update" class="blcass"/>
+                  
+                </fieldset>
+              </td>
+            </tr>
+          
+            </table>
+        </form>
 
     </table>
-    
+
+        <h4>Team's Leave</h4>
+
+
+        <div th:if="${#lists.isEmpty(teamLeaves)}">
+          <p>No staff on leave during this period.</p>
+      </div>
+
+      <div th:if="${not #lists.isEmpty(teamLeaves)}">
+          <table border="1">
+              <tr>
+                  <th>Leave Id</th>
+                  <th>Name</th>
+                  <th>Start Date</th>
+                  <th>End Date</th>
+                  <th>Leave Type</th>
+              </tr>
+              <tr th:each="leave:${teamLeaves}">
+                  <td th:text="${leave.leaveId}"></td>
+                  <td th:text="${leave.employee.name}"></td>
+                  <td th:text="${leave.startDate}"></td>
+                  <td th:text="${leave.endDate}"></td>
+                  <td th:text="${leave.leaveType}"></td>
+              </tr>
+          </table>
+      </div>
+
 </body>
 </html>
