--- a/src/main/resources/templates/mgr-pending-approval.html
+++ b/src/main/resources/templates/mgr-pending-approval.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/layout.html :: html_head"/>
+<body>
+    <div th:replace="fragments/layout.html :: header"/>
+    <div th:replace="fragments/layout.html :: menu"/>
 <head>
     <title>Pending Leaves and Claims Request</title>
 </head>
