--- a/src/main/resources/templates/viewLeave.html
+++ b/src/main/resources/templates/viewLeave.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/layout.html :: html_head" />
+<head th:replace="fragments/layout.html :: html_head"/>
 <body>
-    <div th:replace="fragments/layout.html :: header" />
-    <div th:replace="fragments/layout.html :: menu" />
-    <h3>Personal Leave Detail</h3>
+    <div th:replace="fragments/layout.html :: header"/>
+    <div th:replace="fragments/layout.html :: menu"/>
+<head>
+    <title>Personal Leave Detail</title>
+</head>
+
+<body>
+    <div>
+        <h2>Personal Leave Detail</h2>
+    </div>
     
         <table class="framed" >
             <tr>
