--- a/src/main/resources/templates/employee-new.html
+++ b/src/main/resources/templates/employee-new.html
@@ -18,7 +18,8 @@ crossorigin="anonymous">
                 Manager : 
                 <select th:field="*{managerId}">
                   <option value=""></option>
-                  <option th:each="manager : ${eidlist}" th:value="${manager}" th:text="${manager}">
+                  <option th:each="manager : ${eidlist}" th:value="${manager.getManagerId}" 
+                  th:text="${manager.getEmployeeId}+'.'+${manager.getName}">
                     Manager
                   </option>
                 </select>
