--- a/src/main/resources/templates/leavetype-new.html
+++ b/src/main/resources/templates/leavetype-new.html
@@ -1,30 +1,37 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-<title>Add Leave Type</title>
+<title>Add Employees</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
 integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
 crossorigin="anonymous">
 </head>
 <body>
 	<div class="container">
-		<h2>Add Leave Type</h2>
+		<h2>Add LeaveType</h2>
 		<hr/>
 		<form th:action="@{/admin/leavetype/create}" th:object="${leaveType}" method="POST">
-			<input type="text" th:field="*{leaveTypeName}" class="form-control col-4 mb-4" placeholder="Enter Leave Type Name" />
+			<input type="text" th:field="*{leaveTypeName}" class="form-control col-4 mb-4" 
+			placeholder="Enter Name" />
             <span th:if="${#fields.hasErrors('leaveTypeName')}"
             th:errors="*{leaveTypeName}"></span>
-			<input type="number" th:field="*{leavePeriod}" class="form-control col-4 mb-4" placeholder="Enter Leave Type Period" />
+
+			<input type="number" th:field="*{leavePeriod}" class="form-control col-4 mb-4" 
+			placeholder="Enter Period" />
             <span th:if="${#fields.hasErrors('leavePeriod')}"
             th:errors="*{leavePeriod}"></span>
-			<input type="text" th:field="*{description}" class="form-control col-4 mb-4" placeholder="Enter Description" />
+
+			<input type="text" th:field="*{description}" class="form-control col-4 mb-4" 
+			placeholder="Enter Description" />
             <span th:if="${#fields.hasErrors('description')}"
             th:errors="*{description}"></span>
             
-
-            <br/>
+            
+              
+              <br/>
 			<button class="btn btn-primary" type="submit">Save</button>
 			<button class="btn btn-dangerous" type="reset">Reset</button>
-			<input type="hidden" th:field="*{leaveTypeName}"/>
+			
+			
 		</form>
 		<hr/>
 		<a th:href="@{/admin/leavetype/list}">Back To List</a>
