--- a/src/main/resources/templates/viewLeave.html
+++ b/src/main/resources/templates/viewLeave.html
@@ -26,9 +26,11 @@
                 <td th:utext = "${leave.status}">Status</td>
                 
             <td>
-                <span th:if="${leave.status.name() != 'CANCELLED'}">
-                <a th:href="@{/staff/leave/edit/{id}(id=${leave.leaveId})}" class="btn btn-primary btn-sm mb-1">Update</a>
-                <a th:href="@{/staff/delete/{id}(id=${leave.leaveId})}" class="btn btn-danger btn-sm mb-1">Cancel</a>
+                <span th:if="${leave.status.name() != 'CANCELLED'} and ${leave.status.name() != 'REJECTED'} and ${leave.status.name() != 'APPROVED'} and ${leave.startDate.isAfter(todayDate)}">
+                    <a th:href="@{/staff/leave/edit/{id}(id=${leave.leaveId})}" class="btn btn-primary btn-sm mb-1">Update</a>
+                </span>
+                <span th:if="${leave.status.name() != 'CANCELLED'} and ${leave.status.name() != 'REJECTED'} and ${leave.startDate.isAfter(todayDate)}">
+                    <a th:href="@{/staff/delete/{id}(id=${leave.leaveId})}" class="btn btn-danger btn-sm mb-1">Cancel</a>
                 </span>
             </td>
 
@@ -37,6 +39,7 @@
             </td>
 
             </tr>
+            
             
         </table>
         <br><br>
@@ -51,6 +54,7 @@
                 <th>OT Start Date</th>
                 <th>OT End Date</th>
                 <th>Status</th>
+                <th>Manage Request</th>
                 <th>Detail</th>
             </tr>
             <tr th:each = "cr : ${crReq}" >  
@@ -58,6 +62,12 @@
                 <td th:utext = "${cr.OTstartTime}">Start Date</td>
                 <td th:utext = "${cr.OTendTime}">End Date</td>
                 <td th:utext = "${cr.status}">Status</td>
+                <td>
+                    <span th:if="${cr.status.name() != 'CANCELLED'} and ${cr.status.name() != 'REJECTED'} and ${cr.status.name() != 'APPROVED'}">
+                        <a th:href="@{/staff/compensation/edit/{id}(id=${cr.compensationLeaveId})}" class="btn btn-primary btn-sm mb-1">Update</a>
+                        <a th:href="@{/staff/compensation/cancel/{id}(id=${cr.compensationLeaveId})}" class="btn btn-danger btn-sm mb-1">Cancel</a>
+                    </span>
+                </td>
                 <td>
                     <a th:href="@{/staff/compensationRequestDetail/{id}(id=${cr.compensationLeaveId})}" class="btn btn-primary btn-sm mb-1">Detail</a>
                 </td>
