--- a/src/main/resources/templates/compensationRequestDetail.html
+++ b/src/main/resources/templates/compensationRequestDetail.html
@@ -36,7 +36,9 @@
 
     </table>
     
-   
+    <form>
+        <input type="button" value="Go Back" onclick="history.back()">
+    </form>
 
     <div th:replace="fragments/layout.html :: footer" />
 </body>
