--- a/src/main/resources/templates/leaveDetail.html
+++ b/src/main/resources/templates/leaveDetail.html
@@ -39,6 +39,10 @@
         </tr>
 
     </table>
+
+    <form>
+        <input type="button" value="Go Back" onclick="history.back()">
+    </form>
     
    
 
