--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -30,8 +30,9 @@
                 <div class="subnav">
                     <button class="subnavbtn">Staff Menu <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
-                        <a>1</a>
-                        <a>2</a>
+                        <a th:href="@{/staff/leave/new }">Take Leave</a>
+                        <a th:href="@{/staff/compensation/claimLeave }">Calim compensation Leave</a>
+                        <a th:href="@{/staff/viewLeave }">Leave & Claim History</a>
                     </div>
                 </div>
             </div>
