--- a/src/main/resources/templates/createLeave.html
+++ b/src/main/resources/templates/createLeave.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">>   
 <head th:replace="fragments/layout.html :: html_head" />
-<body>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">>   
+
+<body onload="set_time()">
     <div th:replace="fragments/layout.html :: header" />
     <div th:replace="fragments/layout.html :: menu" />
     
@@ -58,8 +59,24 @@
                 </div>
             </div>
         </div>
-    <div th:replace="fragments/layout.html :: footer" />
 
+    <script>
+
+        var myDate = document.getElementById('takeLeaveStartDate');
+        var myDate2 = document.getElementById("takeLeaveEndDate");
+        myDate.valueAsDate=new Date();
+
+        function set_time(){
+           myDate2.setAttribute("min",myDate.value);
+        }
+        
+        myDate.onchange = function(){
+            var x = this.value;
+            myDate2.setAttribute("min", x);
+        }
+    </script>
+
+    <div th:replace="fragments/layout.html :: footer" />
 </body>
 
 
