--- a/src/main/resources/templates/holiday-list.html
+++ b/src/main/resources/templates/holiday-list.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+  crossorigin="anonymous">
+  <link rel="stylesheet" 
+  type="text/css" 
+  href="https://cdn.datatables.net/v/bs4/dt-1.13.1/datatables.min.css"/>
+
 <head>
 
 <head th:replace="fragments/layout.html :: html_head"/>
@@ -15,7 +19,7 @@ crossorigin="anonymous">
   <a th:href="@{/admin/holidays/export/csv}"><i class=" btn btn-dark px-4">Generate Report</i></a>
   <div th:if="${not #lists.isEmpty(pubs)}">
 
-    <table style="border: 1" class="table table-striped table-responsive-md">
+    <table style="border: 1" class="table table-striped table-responsive-md" id="holidaytable">
       <thead>
         <tr class="listHeading">
           <th><span th:text="#{fieldLabel.localName}"></span></th>
@@ -41,5 +45,18 @@ crossorigin="anonymous">
     </table>
   </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+	<script 
+	type="text/javascript" 
+	src="https://cdn.datatables.net/v/bs4/dt-1.13.1/datatables.min.js"></script>
+	<script>
+		$(document).ready(function(){
+			$("#holidaytable").DataTable({
+        "pageLength": 5,
+        "lengthMenu": [ 5, 10, 15, 20, 25, -1 ]
+      });
+			
+		})
+	</script>
 </body>
 </html>
